# madison

./: README.md  madison.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Card.hs  Core.hs  Options.hs  Stats.hs
src/UI/: App.hs  Attr.hs  Card.hs  Core.hs  Report.hs
