cabal-version: 3.6
name: madison
version: 0.1.0.0

synopsis: A haskell implementation of the Wisconsin Card Sorting Task.
author: Tony Beta Lambda
maintainer: tonybetalambda@gmail.com

license: GPL-3.0-or-later
license-file: LICENSE

homepage: https://github.com/tonyxty/madison
bug-reports: https://github.com/tonyxty/madison/issues

library
    exposed-modules:
        Card
        Core
        Stats
        UI.Attr
        UI.Card
        UI.Core
        UI.App
    hs-source-dirs:
        src
    build-depends:
        base ^>= 4.18.0.0,
        mtl ^>= 2.3.0,
        MonadRandom ^>= 0.6,
        random ^>= 1.2.0.0,
        random-shuffle ^>= 0.0.4,
        brick ^>= 1.9,
        vty,
        lens

executable madison
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        MonadRandom ^>= 0.6,
        madison
    ghc-options: -threaded
    hs-source-dirs: app
    default-language: Haskell2010
